--- a/Module2_DOM/Jira_Ticket_Management_Clone/activity/index.html
+++ b/Module2_DOM/Jira_Ticket_Management_Clone/activity/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Jira Ticket Management System</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ticket Management System</title>
+    
     <link rel="stylesheet" href="style_jira.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -36,7 +37,7 @@
                     <i class="far fa-plus-square fa-2x"></i>
                 </div>
                 <div class="delete-ticket">
-                    <i class="fas fa-trash fa-2x"></i>
+                    <i class="del2 fas fa-trash fa-2x"></i>
                 </div>
             </div>
         </div>
